--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>デイトラ追加課題</title>
   <title>コーポレートサイト</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css"
@@ -25,7 +24,7 @@
       </button>
       <nav class="drawer-nav header-nav">
         <ul class="drawer-menu header-nav-list">
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#feature">特長</a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="#feature">特徴</a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#users">導入実績</a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#flow">導入までの流れ</a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#price">料金プラン</a></li>
