--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="top-download-btn"><a href="">資料をダウンロードする</a> </div>
           </div>
         </div>
-        <div class="top-img wow fadeInUp"><img src="/img/At work-amico 1 (1).png" alt=""></div>
+        <div class="top-img wow fadeInUp"><img src="/img/At work-amico 1.png" alt=" work-amico "></div>
       </div>
     </div>
 
@@ -76,7 +76,7 @@
             <div class="feature-message-text">
               Ravekはメンバーが入力したタスクを整理し、ダッシュボードにガントチャートとして表示。ダッシュボードを確認するだけで、誰のどのタスクがどの程度進んでいるのかを一目で把握できます。</div>
           </div>
-          <div class="feature-img wow fadeInRight" data-wow-delay=".5s"><img src="/img/Dashboard-amico (1) 1 (1).png" alt=""></div>
+          <div class="feature-img wow fadeInRight" data-wow-delay=".5s"><img src="/img/Dashboard-amico.png" alt="Dashboard-amico"></div>
         </div>
 
         <div class="feature-item2">
@@ -86,7 +86,7 @@
             <div class="feature-message-text">タスク管理ツールで面倒になりがちなタスクの入力作業。
               RavekはPC・スマートフォンのどちらでもシンプルかつ簡単に入力でき、手間が最小限に抑えられます。本質的な業務に時間を割きましょう。</div>
           </div>
-          <div class="feature-img wow fadeInLeft" data-wow-delay=".5s"><img src="/img/Design tools-amico (1) 1 (1).png" alt=""></div>
+          <div class="feature-img wow fadeInLeft" data-wow-delay=".5s"><img src="/img/Design tools-amico.png" alt="Design tools-amico"></div>
         </div>
 
         <div class="feature-item3">
@@ -97,7 +97,7 @@
               RavekはSlackと連携することで、Slack上でRavekをタスクを追加したり、確認したりできます。都度の切り替えの手間がなくなり、シームレスに扱えるのが特長です。Slackを導入しているなら違和感なく使用できます。
             </div>
           </div>
-          <div class="feature-img wow fadeInRight" data-wow-delay=".5s"><img src="/img/Online world-amico 1 (1).png" alt=""></div>
+          <div class="feature-img wow fadeInRight" data-wow-delay=".5s"><img src="/img/Online world-amico.png" alt="Online world-amico"></div>
         </div>
       </div>
     </section>
@@ -113,28 +113,28 @@
       <h2 class="main-title">導入実績</h2>
       <div class="user-inner wow fadeInUp">
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
         <div class="user-item">
-          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5 (1).png" alt="">
+          <img src="/img/SnapCrab_NoName_2021-2-11_23-35-54_No-00 5.png" alt="SnapCrab_NoName_2021-2-11_23-35-54_No-00">
         </div>
       </div>
     </section>
@@ -145,7 +145,7 @@
       <div class="flow-inner">
         <div class="flow-item item1 wow fadeInLeft" data-wow-delay=".2s">
           <div class="flow-img">
-            <img src="/img/Processing-rafiki (1).png" alt="">
+            <img src="/img/Processing-rafiki.png" alt="Processing-rafiki">
           </div>
           <div class="flow-item-content">
             <div class="flow-item-title">無料トライアルを開始</div>
@@ -154,7 +154,7 @@
         </div>
         <div class="flow-item item2 wow fadeInLeft" data-wow-delay=".5s">
           <div class="flow-img">
-            <img src="/img/Processing-rafiki (1).png" alt="">
+            <img src="/img/Processing-rafiki.png" alt="Processing-rafiki">
           </div>
           <div class="flow-item-content">
             <div class="flow-item-title">本格導入をサポート</div>
@@ -163,7 +163,7 @@
         </div>
         <div class="flow-item item3 wow fadeInLeft" data-wow-delay=".7s">
           <div class="flow-img">
-            <img src="/img/Processing-rafiki (1).png" alt="">
+            <img src="/img/Processing-rafiki.png" alt="Processing-rafiki">
           </div>
           <div class="flow-item-content">
             <div class="flow-item-title">全プロジェクトへ展開</div>
@@ -295,7 +295,7 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-left">
-        <div class="footer-logo"><img src="/img/Ravek (1).png" alt=""></div>
+        <div class="footer-logo"><img src="/img/Ravek (1).png" alt="Ravek (1)"></div>
         <ul class="footer-menu">
           <li class="footer-menu-item"><a href="">会社概要</a></li>
           <li class="footer-menu-item"><a href="">プライバシーポリシー</a> </li>
